--- a/shah/translations/ru_RU.json
+++ b/shah/translations/ru_RU.json
@@ -99,22 +99,7 @@
   "2idJzM": "Значок метамаски находится в правом верхнем углу панели инструментов вашего браузера.",
   "32hLtQ": "Поздравляем! Теперь вы можете отправлять сообщения другим пользователям в Origin и получать информацию обо всех ваших покупках и продажах.",
   "AACIs": "Вы сделали и можете продолжить, нажав кнопку ниже.",
-  "3eD99i": "Подтвердите адрес электронной почты",
-  "1hBrwm": "Добавить имя и фото в профиль",
-  "2gz0qR": "Подтвердите свой номер телефона",
-  "3TLycN": "Подтвердите свою учетную запись Twitter",
-  "40EmFO": "Подтвердите свою учетную запись Airbnb",
-  "lwdxO": "Подтвердите свою учетную запись Facebook",
-  "1D5t77": "Подтвердите свою учетную запись Google",
-  "1Kp4vR": "Подтвердите свою учетную запись Kakao",
-  "2n47iV": "Подтвердите свою учетную запись Wechat",
-  "3amGrd": "Подтвердите свою учетную запись GitHub",
-  "2sZDec": "Подтвердите свою учетную запись Linkedin",
-  "49WgNu": "Подтвердите свою учетную запись Telegram",
-  "4m17sO": "Подтвердите ваш сайт",
-  "1E0NSv": "Создать объявление",
-  "3ADm97": "Купить объявление",
-  "4gPXUa": {
+  "olNLs": {
     "growth.jan2019.name": "Январь 2019 Кампания",
     "growth.jan2019.short_name": "Январь 2019",
     "growth.feb2019.name": "Февраль 2019 Кампания",
@@ -135,8 +120,11 @@
     "growth.sep2019.short_name": "Сентябрь 2019",
     "growth.oct2019.name": "Кампания Октябрь 2019",
     "growth.oct2019.short_name": "Октябрь 2019",
+    "growth.nov2019.name": "Кампания Ноябрь 2019",
+    "growth.nov2019.short_name": "Ноябрь 2019",
     "growth.profile.and.email.requirement": "Подтвержденный адрес электронной почты и Происхождение",
     "growth.two.attestations.requirement": "Два подтверждения в профиле",
+    "growth.three.attestations.requirement": "Верификация трех профилей",
     "growth.profile.requirement": "Имя и фотография в профиле",
     "growth.email.requirement": "Подтвержденный адрес электронной почты",
     "growth.attestation.requirement.twitterAttestation": "Проверка Twitter",
@@ -280,8 +268,38 @@
     "growth.share.content14.link": "Читать статью",
     "growth.share.content15.title": "Представление инвесторов Origin",
     "growth.share.content15.details": "У Origin более чем 500+ инвесторов по всему миру, поддерживающих идею внедрения настоящей P2P коммерции.",
-    "growth.share.content15.link": "Смотреть видео"
+    "growth.share.content15.link": "Смотреть видео",
+    "growth.share.content16.title": "Анна Ван хочет децентрализовать экономику совместного пользования",
+    "growth.share.content16.details": "Анна Ван, региональный менеджер в Китае, делится своими мыслями о миссии Origin и о том, что для нее значит децентрализованная экономика совместного пользования.",
+    "growth.share.content16.link": "Смотреть видео",
+    "growth.share.content17.title": "Райан Ким из Hashed - о том, почему они инвестировали в Origin",
+    "growth.share.content17.details": "Райан Ким, партнер Hashed shares, почему Hashed решил инвестировать в Origin и продолжает поддерживать проект.",
+    "growth.share.content17.link": "Смотреть видео",
+    "growth.share.content18.title": "Как Можно Свободнее. Идеальная Мечта.",
+    "growth.share.content18.details": "Смотрите, как Оби, основатель NodeTokyo, рассказывает о своей мечте о будущем экономики совместного пользования. ",
+    "growth.share.content18.link": "Смотреть видео",
+    "growth.share.content19.title": "Эти венесуэльские торговцы меняют свою торговлю благодаря Origin",
+    "growth.share.content19.details": "Возможность использования местными торговцами криптографии и DApps в своей повседневной торговле открывает прекрасную возможность для развития местных сообществ.",
+    "growth.share.content19.link": "Читать статью",
+    "growth.share.content20.title": "Основатель CoinList обсуждает децентрализованные рынки будущего",
+    "growth.share.content20.details": "Энди Бромберг, соучредитель и президент CoinList, рассказывает о том, что он думает об Origin в долгосрочной перспективе.",
+    "growth.share.content20.link": "Смотреть видео"
   },
+  "3eD99i": "Подтвердите адрес электронной почты",
+  "1hBrwm": "Добавить имя и фото в профиль",
+  "2gz0qR": "Подтвердите свой номер телефона",
+  "3TLycN": "Подтвердите свою учетную запись Twitter",
+  "40EmFO": "Подтвердите свою учетную запись Airbnb",
+  "lwdxO": "Подтвердите свою учетную запись Facebook",
+  "1D5t77": "Подтвердите свою учетную запись Google",
+  "1Kp4vR": "Подтвердите свою учетную запись Kakao",
+  "2n47iV": "Подтвердите свою учетную запись Wechat",
+  "3amGrd": "Подтвердите свою учетную запись GitHub",
+  "2sZDec": "Подтвердите свою учетную запись Linkedin",
+  "49WgNu": "Подтвердите свою учетную запись Telegram",
+  "4m17sO": "Подтвердите ваш сайт",
+  "1E0NSv": "Создать объявление",
+  "3ADm97": "Купить объявление",
   "rouhs": "Продать объявление",
   "3H6hnZ": "Поделись этим в Twitter",
   "2TpGxd": "Поделитесь этим на Facebook",
@@ -495,6 +513,17 @@
   "1Q7JQv": "Нажмите на календарь, чтобы ввести информацию о ценах и наличии. Чтобы выбрать несколько дней, щелкните начало а затем нажмите конец.",
   "46VzsL": "Да",
   "24izZl": "Нет",
+  "3CrBYS": "Местоположение объявления",
+  "4b2VMF": "Это объявление находится в данном местоположении.",
+  "2qv5nR": "Изменить местоположение",
+  "ISDa8": "Выглядит неплохо",
+  "iolRY": "Где вы сейчас находитесь?",
+  "3BUseb": "ул. Главная, 123.",
+  "3JJckg": "Использовать текущее местоположение",
+  "1LKg3s": "Привлекательное местоположение",
+  "SNWO6": "Далее",
+  "Q3OY5": "Вот что увидят потенциальные гости. Отрегулируйте карту так, чтобы ваше объявление было расположено в пределах круга. Для сохранения конфиденциальности, указывайте точное местоположение.",
+  "1ydkJH": "Продолжить",
   "1BpZMF": "Стоимость по умолчанию в будний день {=(Sunday - Thursday nights)}",
   "3G6qlx": "(Воскресенье - четверг ночи)",
   "1eHiRs": "Цены на выходные дни по умолчанию {=(Friday & Saturday nights)}",
@@ -503,6 +532,7 @@
   "3HtD2L": "Цены выходного дня должны быть рядом",
   "2X8kyV": "Цена выходного дня должна быть больше нуля",
   "3NG8OB": "Выходные дни",
+  "1voegg": "Местоположение",
   "1xCDkt": "Детали объявления",
   "4GdyJP": "Продавец",
   "2ydql8": "Выбрать",
@@ -710,7 +740,6 @@
   "EVM0E": "Мы неправильно определили вашу страну?",
   "274abr": "Я подтверждаю, что не являюсь гражданином или резидентом {country}",
   "2Koltq": "Готово",
-  "1ydkJH": "Продолжить",
   "2N2Qh0": "Вернуться домой",
   "11B73I": "Ошибка: не удается определить страну",
   "k4GxP": "Подтвердить аккаунт",
@@ -796,7 +825,9 @@
   "1sKft4": "Недостаточно Ethereum",
   "22ZEKT": "Недостаточно DAI",
   "4zUJH3": "Недостаточно токенов Origin",
-  "1ECzYo": "Недостаточно средств",
+  "4Ed2iA": "Недостаточно токенов OKB. {=Get More}",
+  "4DOKEk": "Получить больше",
+  "49t4a6": "Недостаточно средств",
   "2t43zy": "Где можно купить?",
   "2nApoY": "Комиссия",
   "2QlAhE": "Комиссия за единицу",
@@ -964,7 +995,7 @@
   "26gf1A": "Редактировать объявление",
   "3QDnGQ": "закрыть",
   "1Cqmfq": "очистить",
-  "OdAD9": "copy",
+  "OdAD9": "скопировать",
   "dztC6": "Покупки",
   "3ypwUq": "Объявления",
   "2SCFyd": "Продажи",
@@ -978,13 +1009,18 @@
     "_1": "уведомление"
   },
   "1NaRKF": "Посмотреть все",
-  "3LzIo": "Вы не создали профиль",
-  "48V5Jr": "Защищенность профиля - {percent}",
-  "azH1k": "Верификация профиля позволяет другим пользователям убедиться, что вы реальный человек, и повысить шанс на успешные транзакции в Origin.",
+  "3YmlkH": "No profile created",
+  "1ADqpg": "Create a Profile",
+  "2wdn8N": "Wallet balances",
   "RTtVv": "Подождите, пока мы загружаем твою личность...",
   "1IuKjr": "Безымянный пользователь",
+  "48V5Jr": "Защищенность профиля - {percent}",
   "36t26D": "Зарабатывайте OGN",
   "tHJmL": "Баланс кошелька",
+  "3WKB6S": "Sign Out",
+  "2EjJhq": "You're not signed in",
+  "2eOq3t": "Get secure access to your data by signing with your private key",
+  "136kFa": "Sign In",
   "2NvVVm": "Покупатель:",
   "s1yRf": "Продавец:",
   "4xWP3l": "{nameLink} отклонил ваше предложение {title}",
@@ -997,9 +1033,9 @@
   "1wtMes": "Нет рыночного контракта?",
   "1AfYxb": "Загрузка",
   "1ICRzb": "Подробнее...",
-  "62fCp": "Recommended",
-  "mCjdn": "Origin Marketplace",
-  "3lQO4m": "The easiest way to buy and sell with our marketplace and crypto wallet in one app",
+  "62fCp": "Рекомендуемый",
+  "mCjdn": "Маркетплейс Origin",
+  "3lQO4m": "Самый простой способ покупки и продажи - с помощью нашего Маркетплейса и крипто-кошелька в одном приложении",
   "3CCxQL": "Начало работы на Origin",
   "2TGkcM": "Чтобы успешно взаимодействовать с другими в нашем DApp, вам нужно несколько вещей, прежде чем начать. {=Why do I need to do this?}",
   "3XLNbf": "Зачем мне это делать?",
@@ -1058,6 +1094,7 @@
   "3JfvSq": "Да! Запишите меня",
   "wcJnW": "Нет, спасибо",
   "29ZJOe": "Получить награды",
+  "2JzFg1": "Sign In",
   "4iVrWM": "Загрузка",
   "4apdzo": "Рекламировать сейчас",
   "1o5hKC": "Пожалуйста, введите сумму комиссии",
@@ -1084,7 +1121,7 @@
   "3cZFwT": "Вы успешно продвинули свое объявление. Это дает ему более высокую видимость по сравнению с другими объявлениями в Origin.",
   "3QQbmb": "Список воздействия",
   "1wwWbk": "Средства были перемещены на ваш кошелек",
-  "4DRXi8": "Proxy Balances",
+  "4DRXi8": "Прокси балансы",
   "3NtfDc": "Отозвать",
   "gLVF0": "настройки",
   "1lZQR5": "настройки",
@@ -1309,7 +1346,9 @@
   "2tAdFF": "Ethereum",
   "3M0Mkc": "Maker Dai",
   "3NuPlb": "Токен Origin",
+  "1w0kdV": "Токен OKB",
   "3JTZtf": "Эфир хорош для краткосрочных сделок.",
   "3eoCca": "Maker DAI подходит для долгосрочных объявлений - например, аренда или продажа собственности.",
-  "214S0w": "Полезно для продвижения других объявлений"
+  "214S0w": "Полезно для продвижения других объявлений",
+  "4nb5Gu": "Для использования одним из наших биржевых партнеров"
 }
