--- a/shah/translations/hr_HR.json
+++ b/shah/translations/hr_HR.json
@@ -99,22 +99,7 @@
   "2idJzM": "Ikona Metamask nalazi se u gornjem desnom kutu alatne trake preglednika.",
   "32hLtQ": "Čestitamo! Sada možete obavijestiti druge korisnike o nastanku i ostati u tijeku sa svim svojim kupnjama i prodajom.",
   "AACIs": "Gotovi ste i možete nastaviti pritiskom na gumb ispod.",
-  "3eD99i": "Verify your email address",
-  "1hBrwm": "Add name and photo to profile",
-  "2gz0qR": "Verify your phone number",
-  "3TLycN": "Verify your Twitter account",
-  "40EmFO": "Verify your Airbnb account",
-  "lwdxO": "Verify your Facebook account",
-  "1D5t77": "Verify your Google account",
-  "1Kp4vR": "Verify your Kakao account",
-  "2n47iV": "Verify your Wechat account",
-  "3amGrd": "Verify your GitHub account",
-  "2sZDec": "Verify your LinkedIn account",
-  "49WgNu": "Verify your Telegram account",
-  "4m17sO": "Verify your website",
-  "1E0NSv": "Create a listing",
-  "3ADm97": "Purchase a listing",
-  "4gPXUa": {
+  "olNLs": {
     "growth.jan2019.name": "Kampanja u siječnju 2019. godine",
     "growth.jan2019.short_name": "Siječnja 2019",
     "growth.feb2019.name": "Kampanja veljače 2019. godine",
@@ -135,8 +120,11 @@
     "growth.sep2019.short_name": "September 2019",
     "growth.oct2019.name": "October 2019 Campaign",
     "growth.oct2019.short_name": "October 2019",
+    "growth.nov2019.name": "November 2019 Campaign",
+    "growth.nov2019.short_name": "November 2019",
     "growth.profile.and.email.requirement": "Potvrđena adresa e-pošte i profil porijekla",
     "growth.two.attestations.requirement": "Two profile verifications",
+    "growth.three.attestations.requirement": "Three profile verifications",
     "growth.profile.requirement": "Profile name and photo",
     "growth.email.requirement": "Potvrđena e-pošta",
     "growth.attestation.requirement.twitterAttestation": "Twitter attestation",
@@ -280,8 +268,38 @@
     "growth.share.content14.link": "Read the article",
     "growth.share.content15.title": "Introducing Origin's investors",
     "growth.share.content15.details": "Origin has more than 500+ investors around the world who support the vision of enabling true P2P commerce.",
-    "growth.share.content15.link": "Watch the video"
+    "growth.share.content15.link": "Watch the video",
+    "growth.share.content16.title": "Anna Wang Wants to Decentralize the Sharing Economy",
+    "growth.share.content16.details": "Anna Wang, Regional Manager of China shares her thoughts on Origin’s mission and what a decentralized sharing economy means to her.",
+    "growth.share.content16.link": "Watch the video",
+    "growth.share.content17.title": "Ryan Kim from Hashed on Why They Invested in Origin",
+    "growth.share.content17.details": "Ryan Kim, Partner at Hashed shares why Hashed decided to invest in Origin and continues to support the project today.",
+    "growth.share.content17.link": "Watch the video",
+    "growth.share.content18.title": "As Free As Possible. The Ideal Dream.",
+    "growth.share.content18.details": "Watch Obi, Founder of NodeTokyo sharing his dream for the future of the sharing economy. ",
+    "growth.share.content18.link": "Watch the video",
+    "growth.share.content19.title": "These Venezuelan Merchants are Reshaping Commerce with Origin",
+    "growth.share.content19.details": "By enabling local merchants to adopt crypto and DApps in their everyday commerce, we can empower local communities to thrive.",
+    "growth.share.content19.link": "Read the article",
+    "growth.share.content20.title": "CoinList Founder Discusses Decentralized Marketplaces of the Future",
+    "growth.share.content20.details": "Andy Bromberg, Co-Founder and President of CoinList discusses what he thinks of Origin and our long term vision.",
+    "growth.share.content20.link": "Watch the video"
   },
+  "3eD99i": "Verify your email address",
+  "1hBrwm": "Add name and photo to profile",
+  "2gz0qR": "Verify your phone number",
+  "3TLycN": "Verify your Twitter account",
+  "40EmFO": "Verify your Airbnb account",
+  "lwdxO": "Verify your Facebook account",
+  "1D5t77": "Verify your Google account",
+  "1Kp4vR": "Verify your Kakao account",
+  "2n47iV": "Verify your Wechat account",
+  "3amGrd": "Verify your GitHub account",
+  "2sZDec": "Verify your LinkedIn account",
+  "49WgNu": "Verify your Telegram account",
+  "4m17sO": "Verify your website",
+  "1E0NSv": "Create a listing",
+  "3ADm97": "Purchase a listing",
   "rouhs": "Sell a listing",
   "3H6hnZ": "Share this on Twitter",
   "2TpGxd": "Share this on Facebook",
@@ -495,6 +513,17 @@
   "1Q7JQv": "Click the calendar to enter pricing and availability information. To select multiple days, click the start and then click the end.",
   "46VzsL": "Da",
   "24izZl": "Ne",
+  "3CrBYS": "Listing Location",
+  "4b2VMF": "This is the location currently set on the listing.",
+  "2qv5nR": "Edit location",
+  "ISDa8": "Looks good",
+  "iolRY": "Where is your listing located?",
+  "3BUseb": "123 Main St.",
+  "3JJckg": "Use current location",
+  "1LKg3s": "Fetching location",
+  "SNWO6": "Next",
+  "Q3OY5": "This is what will be shown to potential guests. Adjust the map so that your listing is located within the circle. For your privacy, don’t make it too precise.",
+  "1ydkJH": "Nastaviti",
   "1BpZMF": "Default Weekday Pricing {=(Sunday - Thursday nights)}",
   "3G6qlx": "(Sunday - Thursday nights)",
   "1eHiRs": "Default Weekend Pricing {=(Friday & Saturday nights)}",
@@ -503,6 +532,7 @@
   "3HtD2L": "Cijena za vikend mora biti broj",
   "2X8kyV": "Cijene vikenda moraju biti veće od nule",
   "3NG8OB": "Vikendi",
+  "1voegg": "Location",
   "1xCDkt": "Listing Details",
   "4GdyJP": "Retailer",
   "2ydql8": "Select",
@@ -710,7 +740,6 @@
   "EVM0E": "Jesmo li pogrešno otkrili vašu zemlju?",
   "274abr": "Potvrđujem da nisam državljanin ili stanovnik {country}",
   "2Koltq": "Gotovo",
-  "1ydkJH": "Nastaviti",
   "2N2Qh0": "Back to home",
   "11B73I": "Error: cannot detect country",
   "k4GxP": "Verify Account",
@@ -796,7 +825,9 @@
   "1sKft4": "Not enough Ethereum",
   "22ZEKT": "Not enough DAI",
   "4zUJH3": "Not enough Origin Tokens",
-  "1ECzYo": "Not enough balance",
+  "4Ed2iA": "Not enough OKB Tokens. {=Get More}",
+  "4DOKEk": "Get More",
+  "49t4a6": "Not enough balance",
   "2t43zy": "Where can I get some?",
   "2nApoY": "Commission",
   "2QlAhE": "Commission per Unit",
@@ -978,13 +1009,18 @@
     "_1": "Obavijest"
   },
   "1NaRKF": "Pogledaj sve",
-  "3LzIo": "You haven't created a profile",
-  "48V5Jr": "Profile Strength - {percent}",
-  "azH1k": "Creating a profile allows other users to know that you are real and increases the chances of successful transactions on Origin.",
+  "3YmlkH": "No profile created",
+  "1ADqpg": "Create a Profile",
+  "2wdn8N": "Wallet balances",
   "RTtVv": "Hold on while we load your identity...",
   "1IuKjr": "Korisnik bez naziva",
+  "48V5Jr": "Profile Strength - {percent}",
   "36t26D": "Earn OGN",
   "tHJmL": "Wallet Balances",
+  "3WKB6S": "Sign Out",
+  "2EjJhq": "You're not signed in",
+  "2eOq3t": "Get secure access to your data by signing with your private key",
+  "136kFa": "Sign In",
   "2NvVVm": "Buyer:",
   "s1yRf": "Seller:",
   "4xWP3l": "{nameLink} odbio vašu ponudu na {title}",
@@ -1058,6 +1094,7 @@
   "3JfvSq": "Yes! Sign me up",
   "wcJnW": "No, thanks",
   "29ZJOe": "Get Rewards",
+  "2JzFg1": "Sign In",
   "4iVrWM": "Loading",
   "4apdzo": "Promote Now",
   "1o5hKC": "Please enter a commission amount",
@@ -1309,7 +1346,9 @@
   "2tAdFF": "Ethereum",
   "3M0Mkc": "Maker Dai",
   "3NuPlb": "Origin Token",
+  "1w0kdV": "OKB Token",
   "3JTZtf": "Ether is good for short term listings.",
   "3eoCca": "Maker Dai is good for long term listings like rentals or property sales.",
-  "214S0w": "Useful for promoting other listings"
+  "214S0w": "Useful for promoting other listings",
+  "4nb5Gu": "For use with one of our exchange partners"
 }
