--- a/shah/translations/it_IT.json
+++ b/shah/translations/it_IT.json
@@ -5,8 +5,8 @@
   "yzJlS": "Indirizzo ETH",
   "1SGynn": "Contatto {role}",
   "1FAmA3": "Recensioni",
-  "2gtpRD": "Saldo del conto",
-  "369PK3": "Prendi di più",
+  "2gtpRD": "Saldo",
+  "369PK3": "Ancora",
   "3esZCn": {
     "schema.forSale": "In vendita",
     "schema.forRent": "In Affitto",
@@ -99,22 +99,7 @@
   "2idJzM": "L'icona Metamask si trova in alto a destra nella barra degli strumenti del browser.",
   "32hLtQ": "Congratulazioni! Ora puoi inviare messaggi ad altri utenti su Origin e rimanere aggiornato su tutti i tuoi acquisti e vendite.",
   "AACIs": "Hai finito e puoi continuare premendo il pulsante qui sotto.",
-  "3eD99i": "Verifica il tuo indirizzo email",
-  "1hBrwm": "Aggiungi il nome e la foto al profilo",
-  "2gz0qR": "Verifica il tuo numero di telefono",
-  "3TLycN": "Verifica il tuo account Twitter",
-  "40EmFO": "Verifica il tuo account Airbnb",
-  "lwdxO": "Verifica il tuo account Facebook",
-  "1D5t77": "Verifica il tuo account Google",
-  "1Kp4vR": "Verifica il tuo account Kakao",
-  "2n47iV": "Verifica il tuo account Wechat",
-  "3amGrd": "Verifica il tuo account Github",
-  "2sZDec": "Verifica il tuo account LinkedIn",
-  "49WgNu": "Verifica il tuo account Telegram",
-  "4m17sO": "Verifica il tuo sito web",
-  "1E0NSv": "Crea un annuncio",
-  "3ADm97": "Acquista un annuncio",
-  "4gPXUa": {
+  "olNLs": {
     "growth.jan2019.name": "Campagna di Gennaio 2019",
     "growth.jan2019.short_name": "Gen 2019",
     "growth.feb2019.name": "Campagna di Febbraio 2019",
@@ -135,8 +120,11 @@
     "growth.sep2019.short_name": "Settembre 2019",
     "growth.oct2019.name": "Campagna di Ottobre 2019",
     "growth.oct2019.short_name": "Ottobre 2019",
+    "growth.nov2019.name": "Campagna di Novembre 2019",
+    "growth.nov2019.short_name": "Novembre 2019",
     "growth.profile.and.email.requirement": "Email e profilo Origin verificati",
     "growth.two.attestations.requirement": "Due verifiche del profilo",
+    "growth.three.attestations.requirement": "Tre verifiche del profilo",
     "growth.profile.requirement": "Nome e foto del profilo",
     "growth.email.requirement": "Email verificata",
     "growth.attestation.requirement.twitterAttestation": "Conferma Twitter",
@@ -280,8 +268,38 @@
     "growth.share.content14.link": "Leggi l'articolo",
     "growth.share.content15.title": "Presentazione degli investitori di Origin",
     "growth.share.content15.details": "Origin ha più di 500 investitori in tutto il mondo che la sostengono nella visione di abilitare il vero commercio peer to peer.",
-    "growth.share.content15.link": "Guarda il video"
+    "growth.share.content15.link": "Guarda il video",
+    "growth.share.content16.title": "Anna Wang vuole decentralizzare la Sharing Economy",
+    "growth.share.content16.details": "Anna Wang, direttore regionale della Cina, condivide le sue opinioni sulla missione di Origin e sul significato che la Sharing Economy decentralizzata ha per lei.",
+    "growth.share.content16.link": "Guarda il video",
+    "growth.share.content17.title": "Ryan Kim di Hashed sul perché hanno investito in Origin",
+    "growth.share.content17.details": "Ryan Kim, Partner di Hashed, condivide il motivo per cui Hashed ha deciso di investire in Origin e continua a supportare il progetto oggi.",
+    "growth.share.content17.link": "Guarda il video",
+    "growth.share.content18.title": "Più libero possibile. Il sogno ideale.",
+    "growth.share.content18.details": "Guarda Obi, fondatore di NodeTokyo, mentre condivide il suo sogno per il futuro della Sharing Economy. ",
+    "growth.share.content18.link": "Guarda il video",
+    "growth.share.content19.title": "Questi commercianti venezuelani stanno rimodellando il commercio con Origin",
+    "growth.share.content19.details": "Consentendo ai commercianti locali di adottare criptovalute e DApp nel loro commercio quotidiano, possiamo dare la possibilità alle comunità locali di prosperare.",
+    "growth.share.content19.link": "Leggi l'articolo",
+    "growth.share.content20.title": "Il fondatore di CoinList discute sui mercati decentralizzati del futuro",
+    "growth.share.content20.details": "Andy Bromberg, cofondatore e presidente di CoinList, discute su ciò che pensa di Origin e sulla nostra visione a lungo termine.",
+    "growth.share.content20.link": "Guarda il video"
   },
+  "3eD99i": "Verifica il tuo indirizzo email",
+  "1hBrwm": "Aggiungi il nome e la foto al profilo",
+  "2gz0qR": "Verifica il tuo numero di telefono",
+  "3TLycN": "Verifica il tuo account Twitter",
+  "40EmFO": "Verifica il tuo account Airbnb",
+  "lwdxO": "Verifica il tuo account Facebook",
+  "1D5t77": "Verifica il tuo account Google",
+  "1Kp4vR": "Verifica il tuo account Kakao",
+  "2n47iV": "Verifica il tuo account Wechat",
+  "3amGrd": "Verifica il tuo account Github",
+  "2sZDec": "Verifica il tuo account LinkedIn",
+  "49WgNu": "Verifica il tuo account Telegram",
+  "4m17sO": "Verifica il tuo sito web",
+  "1E0NSv": "Crea un annuncio",
+  "3ADm97": "Acquista un annuncio",
   "rouhs": "Vendi un Articolo",
   "3H6hnZ": "Condividi questo su Twitter",
   "2TpGxd": "Condividi questo su Facebook",
@@ -364,7 +382,7 @@
   "2q9Vot": "Offerta Ritirata",
   "1dxXSN": "Per iniziare",
   "23Rjrw": "Contatto",
-  "2XVXB5": "Scrivendo nella blockchain.",
+  "2XVXB5": "Scrittura nella blockchain.",
   "48sqnA": "Questa operazione potrebbe richiedere un minuto.",
   "3JYttU": "In attesa di conferma.",
   "3q9MLs": "Errore - vedi console",
@@ -495,6 +513,17 @@
   "1Q7JQv": "Fai click sul calendario per inserire i prezzi e le informazioni sulla disponibilità. Per selezionare più giorni, fai clic sull'inizio e poi fai click sulla fine.",
   "46VzsL": "Si",
   "24izZl": "No",
+  "3CrBYS": "Posizione della Proprietà",
+  "4b2VMF": "Questa è la posizione attuale impostata sull'annuncio.",
+  "2qv5nR": "Modifica posizione",
+  "ISDa8": "Tutto a posto",
+  "iolRY": "Dove si trova la tua proprietà?",
+  "3BUseb": "Via Garibaldi 123.",
+  "3JJckg": "Usa la posizione corrente",
+  "1LKg3s": "Recupero della posizione",
+  "SNWO6": "Successivo",
+  "Q3OY5": "Questo è quello che verrà mostrato ai potenziali ospiti. Sistema la mappa in modo che la tua proprietà sia all'interno del cerchio. Per la tua privacy, non farlo troppo preciso.",
+  "1ydkJH": "Continua",
   "1BpZMF": "Prezzo settimanale predefinito {=(Sunday - Thursday nights)}",
   "3G6qlx": "(Domenica - giovedì sera)",
   "1eHiRs": "Prezzo weekend predefinito {=(Friday & Saturday nights)}",
@@ -503,6 +532,7 @@
   "3HtD2L": "Il prezzo del week-end deve essere un numero",
   "2X8kyV": "Il prezzo del week-end deve essere maggiore di zero",
   "3NG8OB": "Week-end",
+  "1voegg": "Posizione",
   "1xCDkt": "Dettagli dell'inserzione",
   "4GdyJP": "Rivenditore",
   "2ydql8": "Seleziona",
@@ -710,7 +740,6 @@
   "EVM0E": "Abbiamo rilevato il tuo paese in modo errato?",
   "274abr": "Dichiaro di non essere un cittadino o residente di {country}",
   "2Koltq": "Fatto",
-  "1ydkJH": "Continua",
   "2N2Qh0": "Indietro a home",
   "11B73I": "Errore: impossibile rilevare il paese",
   "k4GxP": "Verifica l'Account",
@@ -796,7 +825,9 @@
   "1sKft4": "Ethereum insufficienti",
   "22ZEKT": "DAI insufficienti",
   "4zUJH3": "Token Origin insufficienti",
-  "1ECzYo": "Fondi insufficienti",
+  "4Ed2iA": "Token OKB non sufficienti. {=Get More}",
+  "4DOKEk": "Ancora",
+  "49t4a6": "Saldo insufficiente",
   "2t43zy": "Dove posso trovarne?",
   "2nApoY": "Commissione",
   "2QlAhE": "Commissione per unità",
@@ -964,7 +995,7 @@
   "26gf1A": "Modifica inserzione",
   "3QDnGQ": "chiudi",
   "1Cqmfq": "annulla",
-  "OdAD9": "copy",
+  "OdAD9": "copia",
   "dztC6": "Acquisti",
   "3ypwUq": "Annunci",
   "2SCFyd": "Saldi",
@@ -978,13 +1009,18 @@
     "_1": "Notifica"
   },
   "1NaRKF": "Vedi tutto",
-  "3LzIo": "Non hai creato un profilo",
-  "48V5Jr": "Forza del profilo - {percent}",
-  "azH1k": "La creazione del tuo profilo consente ad altri utenti di sapere che sei una persona reale e aumenta le possibilità di transazioni di successo su Origin.",
+  "3YmlkH": "No profile created",
+  "1ADqpg": "Create a Profile",
+  "2wdn8N": "Wallet balances",
   "RTtVv": "Aspetta mentre carichiamo la tua identità...",
   "1IuKjr": "Utente senza nome",
+  "48V5Jr": "Forza del profilo - {percent}",
   "36t26D": "Guadagna OGN",
   "tHJmL": "Saldi del portafoglio",
+  "3WKB6S": "Sign Out",
+  "2EjJhq": "You're not signed in",
+  "2eOq3t": "Get secure access to your data by signing with your private key",
+  "136kFa": "Sign In",
   "2NvVVm": "Compratore:",
   "s1yRf": "Venditore:",
   "4xWP3l": "{nameLink} ha rifiutato la tua offerta per {title}",
@@ -997,9 +1033,9 @@
   "1wtMes": "Nessun contratto di mercato?",
   "1AfYxb": "Caricamento",
   "1ICRzb": "Carica di più...",
-  "62fCp": "Recommended",
-  "mCjdn": "Origin Marketplace",
-  "3lQO4m": "The easiest way to buy and sell with our marketplace and crypto wallet in one app",
+  "62fCp": "Suggerito",
+  "mCjdn": "Marketplace di Origin",
+  "3lQO4m": "Il modo più semplice per acquistare e vendere nel nostro marketplace e wallet cripto in un'unica App",
   "3CCxQL": "Iniziare su Origin",
   "2TGkcM": "Per poter eseguire con successo transazioni con altri sul nostro DApp, avrai bisogno di alcune cose prima di iniziare. {=Why do I need to do this?}",
   "3XLNbf": "Perché devo fare questo?",
@@ -1058,6 +1094,7 @@
   "3JfvSq": "Sì! Iscrivimi",
   "wcJnW": "No grazie",
   "29ZJOe": "Ottieni premi",
+  "2JzFg1": "Sign In",
   "4iVrWM": "Caricamento",
   "4apdzo": "Promuovi adesso",
   "1o5hKC": "Per favore specifica un valore per la commissione",
@@ -1309,7 +1346,9 @@
   "2tAdFF": "Ethereum",
   "3M0Mkc": "Maker Dai",
   "3NuPlb": "Token di Origin",
+  "1w0kdV": "Token OKB",
   "3JTZtf": "Ether è buono per le inserzioni a breve termine.",
   "3eoCca": "Maker Dai è adatto per le inserzioni a lungo termine come affitti o vendite di proprietà.",
-  "214S0w": "Utile per promuovere altri annunci"
+  "214S0w": "Utile per promuovere altri annunci",
+  "4nb5Gu": "Da utilizzare con uno dei nostri exchange partner"
 }
