--- a/shah/translations/zh_CN.json
+++ b/shah/translations/zh_CN.json
@@ -99,22 +99,7 @@
   "2idJzM": "Metamask 图标在浏览器工具栏的右上角。",
   "32hLtQ": "恭喜！您现在可以在 Origin 上向其他用户发送消息，并跟踪您所有购买和销售情况。",
   "AACIs": "已完成，请点击下面的按钮继续。",
-  "3eD99i": "验证电子邮件地址",
-  "1hBrwm": "将姓名和照片添加到个人资料",
-  "2gz0qR": "验证您的手机号码",
-  "3TLycN": "验证您的推特账号",
-  "40EmFO": "验证您的爱彼迎帐户",
-  "lwdxO": "验证您的Facebook帐户",
-  "1D5t77": "验证您的Google帐户",
-  "1Kp4vR": "验证您的Kakao帐户",
-  "2n47iV": "验证您的微信帐户",
-  "3amGrd": "验证您的GitHub帐户",
-  "2sZDec": "验证您的领英账户",
-  "49WgNu": "验证您的电报账户",
-  "4m17sO": "验证你的网址",
-  "1E0NSv": "创建商品列表",
-  "3ADm97": "购买一个商品或服务列表",
-  "4gPXUa": {
+  "olNLs": {
     "growth.jan2019.name": "2019年1月活动",
     "growth.jan2019.short_name": "2019年1月",
     "growth.feb2019.name": "2019年2月活动",
@@ -135,8 +120,11 @@
     "growth.sep2019.short_name": "2019年9月",
     "growth.oct2019.name": "2019年10月活动",
     "growth.oct2019.short_name": "2019年10月",
+    "growth.nov2019.name": "2019年11月的活动",
+    "growth.nov2019.short_name": "2019年 11月",
     "growth.profile.and.email.requirement": "已验证电子邮件和 Origin 个人资料",
     "growth.two.attestations.requirement": "两项身份认证",
+    "growth.three.attestations.requirement": "3个个人信息验证",
     "growth.profile.requirement": "照片和姓名",
     "growth.email.requirement": "电子邮件已验证",
     "growth.attestation.requirement.twitterAttestation": "推特证明",
@@ -280,8 +268,38 @@
     "growth.share.content14.link": "阅读文章",
     "growth.share.content15.title": "介绍Origin的投资方",
     "growth.share.content15.details": "Origin目前在全世界有500多家投资方来支持实现真正的P2P商业的愿景",
-    "growth.share.content15.link": "观看视频"
+    "growth.share.content15.link": "观看视频",
+    "growth.share.content16.title": "Anna Wang想把共享经济去中心化",
+    "growth.share.content16.details": "大中华地区负责人Anna Wang分享了她对Origin想要达成的事情的想法和去中心化的共享经济对她意味着什么。",
+    "growth.share.content16.link": "观看视频",
+    "growth.share.content17.title": "Hashed的Ryan Kim投资Origin的原因",
+    "growth.share.content17.details": "Hashed的合伙人Ryan Kim分享了他们为什么决定投资Origin和为什么他们继续支持该项目",
+    "growth.share.content17.link": "观看视频",
+    "growth.share.content18.title": "尽可能免费。理想的梦想。",
+    "growth.share.content18.details": "观看NodeTokyo的创始人Obi分享他对共享经济未来的梦想。 ",
+    "growth.share.content18.link": "观看视频",
+    "growth.share.content19.title": "这些委内瑞拉商人正在通过Origin重塑商业的概念",
+    "growth.share.content19.details": "通过使本地商人在日常交易中采用加密货币和DApp，我们可以使本地社区蓬勃发展。",
+    "growth.share.content19.link": "阅读文章",
+    "growth.share.content20.title": "CoinList创始人讨论未来的去中心化市场",
+    "growth.share.content20.details": "CoinList的联合创始人兼总裁Andy Bromberg讨论了他对Origin的看法以及我们的长期愿景。",
+    "growth.share.content20.link": "观看视频"
   },
+  "3eD99i": "验证电子邮件地址",
+  "1hBrwm": "将姓名和照片添加到个人资料",
+  "2gz0qR": "验证您的手机号码",
+  "3TLycN": "验证您的推特账号",
+  "40EmFO": "验证您的爱彼迎帐户",
+  "lwdxO": "验证您的Facebook帐户",
+  "1D5t77": "验证您的Google帐户",
+  "1Kp4vR": "验证您的Kakao帐户",
+  "2n47iV": "验证您的微信帐户",
+  "3amGrd": "验证您的GitHub帐户",
+  "2sZDec": "验证您的领英账户",
+  "49WgNu": "验证您的电报账户",
+  "4m17sO": "验证你的网址",
+  "1E0NSv": "创建商品列表",
+  "3ADm97": "购买一个商品或服务列表",
   "rouhs": "售卖一个商品",
   "3H6hnZ": "分享到推特",
   "2TpGxd": "分享到Facebook",
@@ -495,6 +513,17 @@
   "1Q7JQv": "单击日历以输入价格和可订日期。要选择两天以上，请单击开始日期然后单击结束日期。",
   "46VzsL": "是",
   "24izZl": "不是",
+  "3CrBYS": "上市地点",
+  "4b2VMF": "这是清单上当前设置的位置。",
+  "2qv5nR": "修改位置",
+  "ISDa8": "看起来不错",
+  "iolRY": "您的商家信息在哪里？",
+  "3BUseb": "主街123号",
+  "3JJckg": "使用当前位置",
+  "1LKg3s": "提取位置",
+  "SNWO6": "下一步",
+  "Q3OY5": "这将显示给潜在的客人。调整地图使您的清单位于圆圈内。为了您的隐私，请不要过于精确。",
+  "1ydkJH": "继续",
   "1BpZMF": "默认平日价格{=(Sunday - Thursday nights)}",
   "3G6qlx": "（周日至周四晚上）",
   "1eHiRs": "默认平日价格{=(Friday & Saturday nights)}",
@@ -503,6 +532,7 @@
   "3HtD2L": "周末定价必须是一个数字",
   "2X8kyV": "周末定价必须大于零",
   "3NG8OB": "周末",
+  "1voegg": "位置",
   "1xCDkt": "列表详细信息",
   "4GdyJP": "商家",
   "2ydql8": "选择",
@@ -710,7 +740,6 @@
   "EVM0E": "我们是否错误识别您的国家涞源？",
   "274abr": "我声明并确认我不是 {country} 的公民或纳税居民",
   "2Koltq": "完成",
-  "1ydkJH": "继续",
   "2N2Qh0": "回到家里",
   "11B73I": "错误：无法确认您的国家/地区",
   "k4GxP": "验证账号",
@@ -748,23 +777,23 @@
   "3EZpe2": "验证",
   "ZOcva": "验证电邮地址",
   "1yqhXg": "其他用户将知道您有一个经过验证的{provider}帐户, 但您的帐户细节将不会在区块链发布。我们永远不会代表您发布您的账户信息。",
-  "C9Xmg": "Your Facebook account ID",
-  "21Ni1q": "Your Twitter username and account ID",
-  "2W3fI2": "Your Google account ID",
-  "2YI16P": "Your Kakao account ID",
-  "tkKfT": "Your Wechat account ID",
-  "qvgE3": "Your GitHub username and account ID",
-  "DNxYB": "Your LinkedIn username",
+  "C9Xmg": "您的Facebook账号ID",
+  "21Ni1q": "您的推特账号用户名和ID",
+  "2W3fI2": "您的谷歌账号ID",
+  "2YI16P": "您的Kakao账号ID",
+  "tkKfT": "您的微信账号ID",
+  "qvgE3": "您的GitHub账号用户名和ID",
+  "DNxYB": "您的LinkedIn账号用户名",
   "2Hz1fz": "区块链上会显示什么哪些数据？",
   "2qesaW": "验证账号",
   "2CH4s": "点击以下按钮以开始",
   "3W3fYS": "验证您的{provider}账号",
-  "40yC5K": "We will never post on your behalf.",
+  "40yC5K": "我们将永远不会代表您发布",
   "4lWAOc": "取消",
   "3f102t": "验证电话号码",
   "3UqhcV": "验证您的电话号码",
-  "11AuN2": "Enter a valid 10-digit phone number",
-  "2vVGuu": "Enter your 10-digit phone number below",
+  "11AuN2": "请输入有效的10位数电话号码",
+  "2vVGuu": "输入您的10位数电话号码",
   "1y5Usl": "通过继续，您可以授予Origin权限，以便偶尔向您发送消息，例如有关您的交易的通知。\n",
   "1zz7PL": "通过验证您的电话号码，您可以授予Origin权限，偶尔向您发送文本消息，如交易通知。",
   "3O3WLt": "区块链上会显示什么哪些数据？",
@@ -774,9 +803,9 @@
   "jNcvI": "我们已经通过短信向您发送了验证码。请在下面输入",
   "2PjJHN": "验证账号",
   "4hTtL9": "验证您的电报账号",
-  "2KQpoG": "We will never post on your behalf.",
+  "2KQpoG": "我们将永远不会代表您发布",
   "2Ezyas": "区块链上会显示什么哪些数据？",
-  "44w6ur": "Your Telegram username and account ID",
+  "44w6ur": "您的Telegram账号用户名和ID",
   "3jUQ7x": "验证您的网址",
   "vyn8P": "在下面输入你的网址",
   "2DQDJG": "区块链上会显示什么哪些数据？",
@@ -791,19 +820,21 @@
   "2jI1fH": "报到",
   "2dFweL": "结束",
   "7piHc": "查看",
-  "2Vumnj": "A newer version of this listing has been published",
-  "28LlnA": "View Current Listing",
+  "2Vumnj": "此列表的较新版本已发布",
+  "28LlnA": "查看当前列表",
   "1sKft4": "不够以太币（Ethereum）",
   "22ZEKT": "不够DAI",
   "4zUJH3": "不够Origin代币（OGN)",
-  "1ECzYo": "余额不够",
-  "2t43zy": "Where can I get some?",
+  "4Ed2iA": "OKB代币不足。 {=Get More}",
+  "4DOKEk": "获取更多",
+  "49t4a6": "余额不足",
+  "2t43zy": "在哪里可以得到一些？",
   "2nApoY": "委任",
   "2QlAhE": "单位佣金",
   "1Lcd02": "总预算",
   "NWpZ1": "总剩余预算",
   "3a7oWw": "曝光清单",
-  "1wulHG": "Edit Commission",
+  "1wulHG": "编辑佣金",
   "2SB7RO": "等待",
   "ZPHz5": "有人出价购买这份清单。",
   "bxYNS": "出售",
@@ -821,21 +852,21 @@
   "4BR6ev": "另外一个买家已为此商品列表出价。",
   "2H9umQ": "不可用",
   "4gzHi7": "该列表目前不可用",
-  "8kJRE": "Promote your listing with",
-  "1voSMo": "Get more exposure and sell faster.",
+  "8kJRE": "通过...推广您的商家信息",
+  "1voSMo": "获得更多的曝光并更快地销售。",
   "4u4ITL": "立即推广",
   "1uOQBZ": "如何获得OGN",
   "1LPH0L": "数量",
-  "VflZn": "Check In",
-  "3vWMrZ": "Check Out",
-  "Lr2Bk": "Total Price",
-  "198mwu": "Payment",
+  "VflZn": "入住",
+  "3vWMrZ": "退房",
+  "Lr2Bk": "总价",
+  "198mwu": "支付",
   "7Rxil": "送货地址",
   "IlnwX": "数量",
-  "YK9UI": "ETH, of equivalent value, in your wallet will be converted to DAI.",
-  "4zMr8t": "Confirm Purchase",
-  "1ykizg": "Please confirm your purchase",
-  "2EM2dq": "Confirm Purchase",
+  "YK9UI": "您钱包中的等值以太坊代币将转换为DAI",
+  "4zMr8t": "确认购买",
+  "1ykizg": "请确认您的购买",
+  "2EM2dq": "确认购买",
   "3ODHrz": "返回",
   "4gBRqG": "书",
   "14a5oV": "可订日期",
@@ -844,23 +875,23 @@
   "4xvjOX": "注意：这与您的 {userTimeZone}时区不同",
   "NF15": "清除",
   "dyal9": "未找到列表",
-  "1qiDQm": "Listing Invalid",
+  "1qiDQm": "列表无效",
   "ZOcTF": "列表项目 {id}",
   "1JLB9": "该卖家的其他物品",
   "OTShT": "产品描述",
   "JsYWH": "关于卖家",
   "31xap2": "卖家",
-  "2msHsu": "Swap for {token}",
-  "gOdBz": "Click below to swap ETH for {token}",
-  "WJo6H": "Swapped {eth} ETH for {tokenValue}{token}",
-  "1Aj4HH": "Please authorize Origin to move {token} on your behalf.",
-  "1NGwwh": "Approve {token}",
-  "3tkXSE": "Click below to approve {token} for use on Origin",
+  "2msHsu": "换 {token}",
+  "gOdBz": "点击下面的以太坊代币兑换为 {token}",
+  "WJo6H": "已将 {eth}  ETH 兑换成为 {tokenValue} ",
+  "1Aj4HH": "请授权Origin代表您移动 {token}",
+  "1NGwwh": "批准 {token}",
+  "3tkXSE": "点击下面的按钮，将 {token} 批准用于Origin",
   "4gGbfA": "批准",
   "48zmKx": "你已经对此商品表示感兴趣并出价。你的出价将在几秒钟后显示。你支付的 ETH 已经被存入到智能合约中的托管。",
   "1uk7Ue": "查看订单详情",
-  "3Qm76M": "Origin may now move {token} on your behalf.",
-  "2zkwns": "Payment Amount",
+  "3Qm76M": "现在Origin可能会代表您移动 {token}",
+  "2zkwns": "支付金额",
   "2TwLaC": "支付方式",
   "AgJy7": "这个卖方接受",
   "4BL08O": "这个字段是必填的",
@@ -923,7 +954,7 @@
   "3FiXKC": "{partyName}在{listingTitle}和{offerTimestamp}上面撤回报价",
   "3qQSfn": "{partyName}在{listingTitle}和 {offerTimestamp}上面提出报价",
   "1AZUhv": "加载活动中...",
-  "CIXm3": "You haven't started a conversation with this user",
+  "CIXm3": "您尚未与该用户开始进行对话",
   "PESUQ": "关",
   "1d5eDn": "输入一点什么",
   "K46gs": "发送",
@@ -964,7 +995,7 @@
   "26gf1A": "编辑列表",
   "3QDnGQ": "关闭",
   "1Cqmfq": "清除",
-  "OdAD9": "copy",
+  "OdAD9": "复制",
   "dztC6": "已购商品",
   "3ypwUq": "列表",
   "2SCFyd": "销售",
@@ -978,13 +1009,18 @@
     "_1": "通知"
   },
   "1NaRKF": "查看全部",
-  "3LzIo": "您尚未创建个人资料",
-  "48V5Jr": "账户优点-{percent}",
-  "azH1k": "创建一个配置文件可以让其他用户知道你是真实的，并增加在Origin上成功交易的机会。",
+  "3YmlkH": "No profile created",
+  "1ADqpg": "Create a Profile",
+  "2wdn8N": "Wallet balances",
   "RTtVv": "请稍候，我们正在加载您的身份...",
   "1IuKjr": "未命名的用户",
+  "48V5Jr": "账户优点-{percent}",
   "36t26D": "赚钱OGN",
   "tHJmL": "钱包余额",
+  "3WKB6S": "Sign Out",
+  "2EjJhq": "You're not signed in",
+  "2eOq3t": "Get secure access to your data by signing with your private key",
+  "136kFa": "Sign In",
   "2NvVVm": "买方:",
   "s1yRf": "卖方:",
   "4xWP3l": "{nameLink} 拒绝了你的出价 {title}",
@@ -997,9 +1033,9 @@
   "1wtMes": "没有市场合约？",
   "1AfYxb": "加载中",
   "1ICRzb": "装载更多...",
-  "62fCp": "Recommended",
+  "62fCp": "推荐",
   "mCjdn": "Origin Marketplace",
-  "3lQO4m": "The easiest way to buy and sell with our marketplace and crypto wallet in one app",
+  "3lQO4m": "最简单的方法在同一个APP去使用我们的市场和加密钱包进行买卖",
   "3CCxQL": "开始使用Origin",
   "2TGkcM": "为了在我们的DApp上成功地与他人交易，在开始之前你需要做一些事情。 {=Why do I need to do this?}",
   "3XLNbf": "我要什么需要完成这个步骤？",
@@ -1058,6 +1094,7 @@
   "3JfvSq": "我要注册！",
   "wcJnW": "不用了，谢谢",
   "29ZJOe": "获取奖励",
+  "2JzFg1": "Sign In",
   "4iVrWM": "加载中",
   "4apdzo": "立即推广",
   "1o5hKC": "请输入佣金金额",
@@ -1101,7 +1138,7 @@
   "1gSlTw": "增长服务器",
   "nqaAu": "Relayer服务器",
   "1kwp9A": "GraphQL 服务器",
-  "1uARmt": "Messaging Key Server",
+  "1uARmt": "消息传递密钥服务器",
   "CekKD": "Messaging Namespace",
   "28zT3p": "性能模式",
   "1gHMka": "屏幕控制台",
@@ -1309,7 +1346,9 @@
   "2tAdFF": "以太币（Ethereum）",
   "3M0Mkc": "Maker Dai",
   "3NuPlb": "Origin 代币",
+  "1w0kdV": "OKB Token",
   "3JTZtf": "Ether适用于短期列表。",
   "3eoCca": "Maker Dai 适用于长期的商品或服务列表，例如房屋租赁和房地产销售。",
-  "214S0w": "有助于推广其他商品"
+  "214S0w": "有助于推广其他商品",
+  "4nb5Gu": "For use with one of our exchange partners"
 }
